--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <div class="kutu">
-    <h1>Canım Arkadaşım</h1>
+    <h1>Britneyy</h1>
 
     <p>Biliyorsun ya, seninle geçirdiğim her saniye zaten yeter bana</p>
     <p>En zor günümde bir mesajınla gülümsetiyorsun</p>
@@ -33,12 +33,13 @@
 
     <p>Arada saçma sapan tartışsak da</p>
     <p>Bir şekilde yine birbirimizi buluyoruz</p>
+    <p>Çünkü gerçek dostluk böyle bir şey işte</p>
 
     <p>Ne olursa olsun, nerde olursan ol</p>
-    <p>Beni ara, yaz, kapıma dayan…</p>
+    <p>Beni ara, yaz, kapına dayan…</p>
     <p>Ben hep burdayım, hep olacağım</p>
 
-    <p>Seni çok seviyorum  iyi ki varsın</p>
+    <p>Seni çok seviyorum kanka, iyi ki varsın</p>
     <p>iyi ki seninle aynı yolda yürüyorum ♡</p>
 
     <button onclick="document.getElementById('sarki').play(); this.style.display='none'">Müziği Aç ♡</button>
